--- a/package.json
+++ b/package.json
@@ -18,5 +18,15 @@
   "bugs": {
     "url": "https://github.com/jpaomat/mag-stadistics-dna-processed-function/issues"
   },
-  "homepage": "https://github.com/jpaomat/mag-stadistics-dna-processed-function#readme"
+  "homepage": "https://github.com/jpaomat/mag-stadistics-dna-processed-function#readme",
+  "dependencies": {
+    "babel-jest": "^26.6.3",
+    "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.12.1",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "eslint": "^7.32.0",
+    "jest": "^26.6.3"
+  }
 }
