--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -70,3 +70,44 @@ jobs:
         with:
           name: coverage
           path: coverage
+
+  sonarcloud:
+    runs-on: ubuntu-20.04
+    needs: [test-lint, test-coverage]
+    name: SonarCloud
+    steps:
+      - uses: actions/checkout@v2
+      - name: Restore Data
+        uses: actions/download-artifact@v2
+        with:
+          name: coverage
+          path: coverage
+      - name: Current Branch
+        shell: bash
+        id: long-lived-branch
+        run: |
+          CURRENT_BRANCH=$(echo ${GITHUB_REF#refs/heads/})
+          if [ "$CURRENT_BRANCH" != "master" ] && [ "$CURRENT_BRANCH" != "staging" ] && [ "$CURRENT_BRANCH" != "qa" ]
+          then
+            CURRENT_BRANCH="qa"
+          fi
+          echo "##[set-output name=branch;]$(echo ${CURRENT_BRANCH})"
+          echo "Sonar Branch report => " ${CURRENT_BRANCH}
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+  # sonar:
+  #   runs-on: ubuntu-20.04
+  #   needs: [test-lint, test-coverage]
+  #   steps:
+  #     - name: SonarCloud Scanner
+  #       uses: ./.github/actions/bbog-dig-sonarcloud-pipeline
+  #       with:
+  #         language: ${{ env.language }}
+  #         current-branch: ${{ steps.long-lived-branch.outputs.branch }}
+  #         access-token: ${{ secrets.SONAR_CLOUD_TOKEN }}
+  #         project-name: ${{ github.event.repository.name }}
+  #         project-key: ${{ github.event.repository.name }}
