--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -94,7 +94,7 @@ jobs:
           echo "##[set-output name=branch;]$(echo ${CURRENT_BRANCH})"
           echo "Sonar Branch report => " ${CURRENT_BRANCH}
       - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
+        uses: SonarSource/sonarcloud-github-action@v1.3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
