Adding sonar step at pipeline

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,7 +1,7 @@
 name: QA-build-test-deploy
 on:
   push:
-    branches: [qa, feature/*]
+    branches: [master, feature/*]
 env:
   ### VARIABLES GENERALES ###
   project_name: "mag-stadistics-dna-processed-function"
@@ -27,7 +27,7 @@ jobs:
           cache-name: nodejs-github-actions
         with:
           path: node_modules
-          key: npm-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}-dev
+          key: npm-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}-master
           restore-keys: npm-${{ env.cache-name }}
       - name: Install Dependencies
         run: |
@@ -44,7 +44,7 @@ jobs:
           cache-name: nodejs-github-actions
         with:
           path: node_modules
-          key: npm-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}-dev
+          key: npm-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}-master
           restore-keys: npm-${{ env.cache-name }}
       - name: Running Linter
         run: npm run lint
@@ -60,7 +60,7 @@ jobs:
           cache-name: nodejs-github-actions
         with:
           path: node_modules
-          key: npm-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}-dev
+          key: npm-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}-master
           restore-keys: npm-${{ env.cache-name }}
       - name: Running Test
         run: |
@@ -82,30 +82,11 @@ jobs:
         with:
           name: coverage
           path: coverage
-      # - name: SonarCloud Scan
-      #   uses: SonarSource/sonarcloud-github-action@v1.3
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      - name: Current Branch
-        shell: bash
-        id: long-lived-branch
-        run: |
-          CURRENT_BRANCH=$(echo ${GITHUB_REF#refs/heads/})
-          if [ "$CURRENT_BRANCH" != "main" ] && [ "$CURRENT_BRANCH" != "staging" ] && [ "$CURRENT_BRANCH" != "qa" ]
-          then
-            CURRENT_BRANCH="qa"
-          fi
-          echo "##[set-output name=branch;]$(echo ${CURRENT_BRANCH})"
-          echo "Sonar Branch report => " ${CURRENT_BRANCH}
-      - name: SonarCloud Scanner
+      - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v1.3
-        with:
-          language: ${{ env.language }}
-          current-branch: ${{ steps.long-lived-branch.outputs.branch }}
-          access-token: ${{ secrets.SONAR_TOKEN }}
-          project-name: ${{ github.event.repository.name }}
-          project-key: ${{ github.event.repository.name }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   # sonar:
   #   runs-on: ubuntu-20.04
