--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
   "homepage": "https://github.com/jpaomat/mag-stadistics-dna-processed-function#readme",
   "dependencies": {
     "babel-jest": "^26.6.3",
-    "mysql": "^2.18.1"
+    "lodash": "^4.17.21",
+    "mysql": "^2.18.1",
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.1",
+    "@types/aws-lambda": "^8.10.88",
+    "@types/lodash": "^4.14.178",
+    "@types/node": "^17.0.4",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@vercel/ncc": "^0.33.1",
     "eslint": "^7.32.0",
     "jest": "^26.6.3"
   }
