--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -102,7 +102,7 @@ jobs:
   deploy-lambda:
     runs-on: ubuntu-20.04
     if: github.ref == 'refs/heads/qa'
-    needs: [sonar]
+    needs: [sonarcloud]
     steps:
       - uses: actions/checkout@v2
       - name: Restore cache
