--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -113,7 +113,17 @@ jobs:
           path: node_modules
           key: npm-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}-dev
           restore-keys: npm-${{ env.cache-name }}
-      # - name: Deploy Lambda Function
+      - name: Configure AWS Credentials
+        uses: aws/actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          aws-region: 'us-east-1'
+      - name: Deploy Lambda Function
+        run: |
+          npx ncc build index.ts
+          zip -j deploy.zip ./dist/*
+          aws lambda update-function-code --function-name==mag-stadistics-dna-processed-function --zip-file=fileb://deploy.zip
       #   uses: ./.github/actions/bdb-dig-do-pipelines-actions/lambdas
       #   with:
       #     function-name: ${{ env.team }}-${{ env.project_name }}
