--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -113,12 +113,15 @@ jobs:
           path: node_modules
           key: npm-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}-dev
           restore-keys: npm-${{ env.cache-name }}
-      - name: Configure AWS Credentials
-        uses: aws/actions/configure-aws-credentials@v1
+      - uses: actions/setup-node@v2
         with:
-          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
-          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          aws-region: 'us-east-1'
+          node-version: '12.x'
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
       - name: Deploy Lambda Function
         run: |
           npx ncc build index.ts
