--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -100,7 +100,7 @@ jobs:
 
   deploy-lambda:
     runs-on: ubuntu-20.04
-    if: github.ref == 'refs/heads/qa'
+    # if: github.ref == 'refs/heads/qa'
     needs: [sonarcloud]
     steps:
       - uses: actions/checkout@v2
