--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test_jest": "jest --coverage --watchAll",
     "test": "jest --coverage --no-watchman",
-    "lint": "npx eslint src/"
+    "lint": "tslint -c tslint.json -p tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -20,15 +20,8 @@
   },
   "homepage": "https://github.com/jpaomat/mag-stadistics-dna-processed-function#readme",
   "dependencies": {
-    "aws-sdk": "^2.1048.0",
     "babel-jest": "^26.6.3",
-    "body-parser": "^1.19.1",
-    "cookie-parser": "^1.4.6",
-    "debug": "^4.3.3",
-    "express": "^4.17.2",
-    "express-actuator": "^1.8.0",
     "lodash": "^4.17.21",
-    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "typescript": "^4.5.4"
   },
@@ -39,7 +32,7 @@
     "@types/node": "^17.0.4",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@vercel/ncc": "^0.33.1",
-    "eslint": "^7.32.0",
+    "tslint": "~5.17.0",
     "jest": "^26.6.3"
   }
 }
