--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -115,6 +115,12 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '12.x'
+      - name: Build
+        run: npm run build
+      - name: Move node_modules to dist
+        run: mv node_modules build/node_modules
+      - name: Zip
+        run: (cd build && zip -r ../function.zip .)
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -122,7 +128,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
       - name: Deploy Lambda Function
+          # npx ncc build index.ts
+          # zip function.zip ./build/*
         run: |
-          npx ncc build index.ts
-          zip -j deploy.zip ./dist/*
-          aws lambda update-function-code --function-name=${{env.project_name}} --zip-file=fileb://deploy.zip
+          aws lambda update-function-code --function-name=${{env.project_name}} --zip-file=fileb://function.zip
