--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -101,7 +101,7 @@ jobs:
   deploy-lambda:
     runs-on: ubuntu-20.04
     # if: github.ref == 'refs/heads/qa'
-    needs: [sonarcloud]
+    needs: [install-dev-dependencie]
     steps:
       - uses: actions/checkout@v2
       - name: Restore cache
