--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   },
   "homepage": "https://github.com/jpaomat/mag-stadistics-dna-processed-function#readme",
   "dependencies": {
+    "aws-sdk": "^2.1048.0",
     "babel-jest": "^26.6.3",
+    "debug": "^4.3.3",
     "lodash": "^4.17.21",
     "mysql": "^2.18.1",
+    "mysql-singleton": "^1.0.5",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
