--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "aws-sdk": "^2.1048.0",
     "babel-jest": "^26.6.3",
+    "console": "^0.7.2",
     "debug": "^4.3.3",
     "lodash": "^4.17.21",
     "mysql": "^2.18.1",
