--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@types/node": "^17.0.4",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@vercel/ncc": "^0.33.1",
-    "tslint": "~5.17.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "tslint": "~5.17.0"
   }
 }
