--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "@babel/preset-env": "^7.12.1",
     "@types/aws-lambda": "^8.10.88",
     "@types/lodash": "^4.14.178",
-    "@types/node": "^17.0.4",
+    "@types/node": "14.6.2",
+    "ts-node": "^8.0.2",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@vercel/ncc": "^0.33.1",
     "jest": "^26.6.3",
