Testing connection with DB DNA_VERIFICATION_MUTANTS

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -115,6 +115,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '12.x'
+      - name: Install
+        run: npm install
       - name: Build
         run: npm run build
       - name: Move node_modules to dist
