--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "test_jest": "jest --coverage --watchAll",
+    "test1": "jest",
     "test": "jest --coverage --no-watchman",
     "lint": "tslint -c tslint.json -p tsconfig.json"
   },
@@ -22,23 +23,20 @@
   "homepage": "https://github.com/jpaomat/mag-stadistics-dna-processed-function#readme",
   "dependencies": {
     "aws-sdk": "^2.1048.0",
-    "babel-jest": "^26.6.3",
     "console": "^0.7.2",
     "debug": "^4.3.3",
-    "lodash": "^4.17.21",
     "mysql": "^2.18.1",
-    "mysql-singleton": "^1.0.5",
-    "typescript": "^4.5.4"
+    "mysql-singleton": "^1.0.5"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.12.1",
     "@types/aws-lambda": "^8.10.88",
-    "@types/lodash": "^4.14.178",
+    "@types/jest": "^27.0.3",
     "@types/node": "14.6.2",
-    "ts-node": "^8.0.2",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
-    "@vercel/ncc": "^0.33.1",
-    "jest": "^26.6.3",
-    "tslint": "~5.17.0"
+    "jest": "^24.9.0",
+    "ts-jest": "^26.0.0",
+    "ts-node": "^8.0.2",
+    "tslint": "~5.17.0",
+    "typescript": "^4.5.4"
   }
 }
