--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,3 +10,6 @@ sonar.organization=jpaomat
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.exclusions = **/node_modules/**,**/*.spec.ts,**/test.ts,**/*main.ts,jest.config.js
+sonar.test.inclusions=**/*.spec.ts
