--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "@types/jest": "^27.0.3",
     "@types/node": "14.6.2",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
-    "jest": "^24.9.0",
-    "ts-jest": "^26.0.0",
+    "jest": "^26.6.3",
+    "ts-jest": "26.0.0",
     "ts-node": "^8.0.2",
     "tslint": "~5.17.0",
     "typescript": "^4.5.4"
