--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "build": "tsc",
     "test_jest": "jest --coverage --watchAll",
-    "test1": "jest",
     "test": "jest --coverage --no-watchman",
     "lint": "tslint -c tslint.json -p tsconfig.json"
   },
@@ -33,8 +32,8 @@
     "@types/jest": "^27.0.3",
     "@types/node": "14.6.2",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
-    "jest": "^26.6.3",
-    "ts-jest": "26.0.0",
+    "jest": "^24.9.0",
+    "ts-jest": "^26.0.0",
     "ts-node": "^8.0.2",
     "tslint": "~5.17.0",
     "typescript": "^4.5.4"
