--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -76,22 +76,22 @@ jobs:
     name: SonarCloud
     steps:
       - uses: actions/checkout@v2
-      - name: Restore Data
-        uses: actions/download-artifact@v2
-        with:
-          name: coverage
-          path: coverage
-      - name: Current Branch
-        shell: bash
-        id: long-lived-branch
-        run: |
-          CURRENT_BRANCH=$(echo ${GITHUB_REF#refs/heads/})
-          if [ "$CURRENT_BRANCH" != "main" ] && [ "$CURRENT_BRANCH" != "staging" ] && [ "$CURRENT_BRANCH" != "qa" ]
-          then
-            CURRENT_BRANCH="qa"
-          fi
-          echo "##[set-output name=branch;]$(echo ${CURRENT_BRANCH})"
-          echo "Sonar Branch report => " ${CURRENT_BRANCH}
+      # - name: Restore Data
+      #   uses: actions/download-artifact@v2
+      #   with:
+      #     name: coverage
+      #     path: coverage
+      # - name: Current Branch
+      #   shell: bash
+      #   id: long-lived-branch
+      #   run: |
+      #     CURRENT_BRANCH=$(echo ${GITHUB_REF#refs/heads/})
+      #     if [ "$CURRENT_BRANCH" != "main" ] && [ "$CURRENT_BRANCH" != "staging" ] && [ "$CURRENT_BRANCH" != "qa" ]
+      #     then
+      #       CURRENT_BRANCH="qa"
+      #     fi
+      #     echo "##[set-output name=branch;]$(echo ${CURRENT_BRANCH})"
+      #     echo "Sonar Branch report => " ${CURRENT_BRANCH}
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v1.3
         env:
