--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,15 +1,17 @@
 sonar.projectKey=jpaomat_mag-find-mutants-function
 sonar.organization=jpaomat
+sonar.language=ts
+# =====================================================
+#   Properties that will be shared amongst all modules
+# =====================================================
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=mag-stadistics-dna-processed-function
-#sonar.projectVersion=1.0
+# SQ standard properties
+sonar.sources=src
+sonar.exclusions=*/node_modules/,/.spec.ts,*/.mock.ts,*/test.ts,/*main.ts,/environment..ts,*/environment.ts,/test.ts,*/config.ts
+sonar.tests=test
+sonar.test.inclusions=*/.spec.ts
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
-
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.exclusions = **/node_modules/**,**/*.spec.ts,**/test.ts,**/*main.ts,jest.config.js
-sonar.test.inclusions=**/*.spec.ts
+# Properties specific to language plugins:
+#   - For TypeScript
+sonar.ts.tslint.configPath=tslint.json
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
