--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,12 +5,13 @@ sonar.language=ts
 #   Properties that will be shared amongst all modules
 # =====================================================
 
-# SQ standard properties
-sonar.sources=src
-sonar.exclusions=*/node_modules/,/.spec.ts,*/.mock.ts,*/test.ts,/*main.ts,/environment..ts,*/environment.ts,/test.ts,*/config.ts
-sonar.test.inclusions=*/.spec.ts
-
 # Properties specific to language plugins:
 #   - For TypeScript
 sonar.ts.tslint.configPath=tslint.json
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
+
+# SQ standard properties
+sonar.sources=src
+sonar.exclusions=*/node_modules/,/.spec.ts,*/.mock.ts,*/test.ts,/*main.ts,/environment..ts,*/environment.ts,/test.ts,*/config.ts
+sonar.tests=src
+sonar.test.inclusions=*/.spec.ts
