--- a/tsconfig.json
+++ b/tsconfig.json
@@ -66,7 +66,7 @@
   },
   "include": [
     "./src"
-  ],
+, "__tests__"],
   "exclude": [
     "../../mag-find-mutants-function/node_modules",
     "./node_modules/*",
