Fixing report sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,5 +13,5 @@ sonar.typescript.lcov.reportPaths=coverage/lcov.info
 # SQ standard properties
 sonar.sources=src
 sonar.exclusions=*/node_modules/,/.spec.ts,*/.mock.ts,*/test.ts,/*main.ts,/environment..ts,*/environment.ts,/test.ts,*/config.ts
-sonar.tests=__test__
+sonar.tests=__tests__
 sonar.test.inclusions=*/.spec.ts
