--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,12 +6,14 @@ sonar.language=ts
 # =====================================================
 
 # Properties specific to language plugins:
-#   - For TypeScript
-sonar.ts.tslint.configPath=tslint.json
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
 # SQ standard properties
 sonar.sources=src
 sonar.exclusions=*/node_modules/,/.spec.ts,*/.mock.ts,*/test.ts,/*main.ts,/environment..ts,*/environment.ts,/test.ts,*/config.ts
 sonar.tests=__tests__
 sonar.test.inclusions=*/.spec.ts
+
+#Excluding app folder in code coverage analysis
+sonar.coverage.exclusions=app/src/**.ts
+sonar.ts.tslint.configPath=tslint.json
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
