Fixing report sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,4 +16,6 @@ sonar.test.inclusions=*/.spec.ts
 #Excluding app folder in code coverage analysis
 sonar.coverage.exclusions=app/src/**.ts
 sonar.ts.tslint.configPath=tslint.json
-sonar.ts.coverage.lcovReportPath=lcov.info
+sonar.ts.coverage.lcovReportPath=coverage/lcov.info
+
+sonar.coverageReportPaths=coverage/lcov.info
