Fixing report sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,4 +18,4 @@ sonar.coverage.exclusions=app/src/**.ts
 sonar.ts.tslint.configPath=tslint.json
 sonar.ts.coverage.lcovReportPath=coverage/lcov.info
 
-# sonar.coverageReportPaths=coverage/lcov.info
+sonar.coverageReportPaths=coverage/clover.xml
