Fixing report sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,6 +16,7 @@ sonar.test.inclusions=*/.spec.ts
 #Excluding app folder in code coverage analysis
 sonar.coverage.exclusions=app/src/**.ts
 sonar.ts.tslint.configPath=tslint.json
-sonar.ts.coverage.lcovReportPath=coverage/lcov.info
+sonar.genericcoverage.unitTestReportPaths=coverage/sonar-report.xml
+# sonar.ts.coverage.lcovReportPath=coverage/lcov.info
 
-sonar.coverageReportPaths=coverage/clover.xml
+# sonar.coverageReportPaths=coverage/clover.xml
