--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "aws-sdk": "^2.1048.0",
     "console": "^0.7.2",
     "debug": "^4.3.3",
+    "jest-sonar-reporter": "^2.0.0",
     "mysql": "^2.18.1",
     "mysql-singleton": "^1.0.5"
   },
@@ -33,6 +34,7 @@
     "@types/node": "14.6.2",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "jest": "^24.9.0",
+    "jest-sonar": "^0.2.12",
     "ts-jest": "^26.0.0",
     "ts-node": "^8.0.2",
     "tslint": "~5.17.0",
