--- a/package.json
+++ b/package.json
@@ -14,6 +14,14 @@
     "type": "git",
     "url": "git+https://github.com/jpaomat/mag-stadistics-dna-processed-function.git"
   },
+  "hulky": {
+    "//1": "Use git commit --no-verify to bypass the pre-commit hook",
+    "//2": "Use git push --no-verify to bypass the pre-push hook",
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "pre-push": "npm run test"
+    }
+  },
   "keywords": [],
   "author": "jpaomat@gmail.com",
   "license": "ISC",
@@ -25,6 +33,7 @@
     "aws-sdk": "^2.1048.0",
     "console": "^0.7.2",
     "debug": "^4.3.3",
+    "husky": "^7.0.4",
     "mysql": "^2.18.1",
     "mysql-singleton": "^1.0.5"
   },
