--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,5 +11,7 @@ sonar.organization=jpaomat
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.exclusions = **/node_modules/**,**/*.spec.ts,**/test.ts,**/*main.ts,jest.config.js
+sonar.exclusions = **/node_modules/,/.spec.ts,*/.mock.ts,*/test.ts,/*main.ts,/environment..ts,*/environment.ts,/test.ts,*/config.ts
 sonar.test.inclusions=**/*.spec.ts
+
+sonar.ts.tslint.configPath=tslint.json
