--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "git+https://github.com/jpaomat/mag-stadistics-dna-processed-function.git"
   },
-  "hulky": {
+  "husky": {
     "//1": "Use git commit --no-verify to bypass the pre-commit hook",
     "//2": "Use git push --no-verify to bypass the pre-push hook",
     "hooks": {
