--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test_jest": "jest --coverage --watchAll",
     "test1": "jest",
     "test": "jest --coverage --no-watchman",
-    "lint": "tslint -c tslint.json -p tsconfig.json"
+    "lint": "tslint -c tslint.json -p tsconfig.json",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -33,7 +34,6 @@
     "aws-sdk": "^2.1048.0",
     "console": "^0.7.2",
     "debug": "^4.3.3",
-    "husky": "^7.0.4",
     "mysql": "^2.18.1",
     "mysql-singleton": "^1.0.5"
   },
@@ -42,6 +42,7 @@
     "@types/jest": "^27.0.3",
     "@types/node": "14.6.2",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "husky": "^7.0.0",
     "jest": "^24.9.0",
     "ts-jest": "^26.0.0",
     "ts-node": "^8.0.2",
