--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test_jest": "jest --coverage --watchAll",
     "test1": "jest",
     "test": "jest --coverage --no-watchman",
-    "lint": "tslint -c tslint.json -p tsconfig.json",
-    "prepare": "is-ci || husky install"
+    "lint": "tslint -c tslint.json -p tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -42,7 +41,7 @@
     "@types/jest": "^27.0.3",
     "@types/node": "14.6.2",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
-    "husky": "^7.0.4",
+    "husky": "^4.2.5",
     "is-ci": "^3.0.1",
     "jest": "^24.9.0",
     "ts-jest": "^26.0.0",
