--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "@types/jest": "^27.0.3",
     "@types/node": "14.6.2",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
-    "husky": "^4.2.5",
-    "is-ci": "^3.0.1",
+    "husky": "^7.0.4",
     "jest": "^24.9.0",
+    "lint-staged": "^12.1.4",
     "ts-jest": "^26.0.0",
     "ts-node": "^8.0.2",
     "tslint": "~5.17.0",
