--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "url": "git+https://github.com/jpaomat/mag-stadistics-dna-processed-function.git"
   },
   "husky": {
+    "//1": "Use git commit --no-verify to bypass the pre-commit hook",
+    "//2": "Use git push --no-verify to bypass the pre-push hook",
     "hooks": {
       "pre-commit": "npm run lint",
       "pre-push": "npm run test"
     }
   },
-  "keywords": [],
+  "keywords": [
+    "husky"
+  ],
   "author": "jpaomat@gmail.com",
   "license": "ISC",
   "bugs": {
@@ -39,7 +43,7 @@
     "@types/jest": "^27.0.3",
     "@types/node": "14.6.2",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
-    "husky": "^7.0.4",
+    "husky": "^4.2.5",
     "jest": "^24.9.0",
     "lint-staged": "^12.1.4",
     "ts-jest": "^26.0.0",
