--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "build": "tsc",
     "test_jest": "jest --coverage --watchAll",
-    "test1": "jest",
     "test": "jest --coverage --no-watchman",
-    "lint": "tslint -c tslint.json -p tsconfig.json"
+    "lint": "tslint -c tslint.json -p tsconfig.json --fix"
   },
   "repository": {
     "type": "git",
@@ -33,8 +32,10 @@
   "homepage": "https://github.com/jpaomat/mag-stadistics-dna-processed-function#readme",
   "dependencies": {
     "aws-sdk": "^2.1048.0",
+    "aws-sdk-mock": "^5.5.0",
     "console": "^0.7.2",
     "debug": "^4.3.3",
+    "jest-sonar-reporter": "^2.0.0",
     "mysql": "^2.18.1",
     "mysql-singleton": "^1.0.5"
   },
@@ -45,7 +46,7 @@
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "husky": "^4.3.8",
     "jest": "^24.9.0",
-    "lint-staged": "^12.1.4",
+    "jest-sonar": "^0.2.12",
     "ts-jest": "^26.0.0",
     "ts-node": "^8.0.2",
     "tslint": "~5.17.0",
